--- a/stilus.css
+++ b/stilus.css
@@ -3,3 +3,42 @@ nav ul
     list-style-type: none;
 }
 
+nav>ul
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+nav li a
+{
+    text-decoration: none;
+}
+
+.legordulo-elem
+{
+    display: none;
+    z-index: 20;
+    width: 80%;
+}
+
+.legordulo
+{
+    position: relative;
+}
+
+.legordulo:hover .legordulo-elem
+{
+    display: block;
+    position: absolute;
+}
+
+nav ul a
+{
+    text-decoration: none;
+    display: block;
+    background-color: rgb(80, 80, 80);
+    color: white;
+    padding: 10px;
+    margin: 5px;
+}
+
