--- a/stilus.css
+++ b/stilus.css
@@ -1,3 +1,17 @@
+/* header
+{
+    
+} */
+
+nav
+{
+    display: block;
+    position: fixed;
+    top: 3%;
+    height: 100px;
+    background-color: aquamarine;
+}
+
 nav ul
 {
     list-style-type: none;
@@ -7,23 +21,39 @@ nav>ul
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    
+}
+
+nav li
+{
+    width: 100px;
+    text-align: center;
 }
 
 nav li a
 {
     text-decoration: none;
+    border-radius: 5px;
 }
 
 .legordulo-elem
 {
     display: none;
     z-index: 20;
-    width: 80%;
+    width: 80px;
+}
+
+.legordulo-elem li a
+{
+    background-color: aliceblue;
+    color: black;
+    border-radius: 5px;
 }
 
 .legordulo
 {
     position: relative;
+
 }
 
 .legordulo:hover .legordulo-elem
@@ -43,7 +73,22 @@ nav ul a
 }
 
 
-nav{
-    position: fixed;
+
+
+.kepek_rendezese
+{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
+    border: 1px solid black;
+    margin: auto;
+}
+
+.kis_kepek img
+{
+    border: 1px solid black;
+    margin: auto;
+    margin: 10px;
+    max-width: 250px;
 }
 
