--- a/stilus.css
+++ b/stilus.css
@@ -1,78 +1,64 @@
-*
-{
+* {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
 
-header
-{
+header {
     height: 100px;
 }
 
-nav
-{
+nav {
     width: 100%;
     padding: 20px;
     background-color: #333;
-    position: fixed; 
+    position: fixed;
     z-index: 1;
     margin: 0px;
-    
 }
 
-nav ul
-{
+nav ul {
     list-style-type: none;
     float: left;
 }
 
-nav>ul
-{
+nav > ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-nav li
-{
+nav li {
     width: 100px;
     text-align: center;
 }
 
-nav li a
-{
+nav li a {
     text-decoration: none;
     border-radius: 5px;
 }
 
-.legordulo-elem
-{
+.legordulo-elem {
     display: none;
     z-index: 20;
     width: 80px;
 }
 
-.legordulo-elem li a
-{
+.legordulo-elem li a {
     background-color: aliceblue;
     color: black;
     border-radius: 5px;
 }
 
-.legordulo
-{
+.legordulo {
     position: relative;
-
 }
 
-.legordulo:hover .legordulo-elem
-{
+.legordulo:hover .legordulo-elem {
     display: block;
     position: absolute;
 }
 
-nav ul a
-{
+nav ul a {
     text-decoration: none;
     display: block;
     background-color: rgb(80, 80, 80);
@@ -81,34 +67,13 @@ nav ul a
     margin: 5px;
 }
 
-article
-{
+article {
     width: 80%;
     margin: auto;
-    position: relative; 
+    position: relative;
 }
 
-
-.kepek_rendezese
-{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 80%;
-    border: 1px solid black;
-    margin: auto;
-}
-
-.kis_kepek>img
-{
-    border: 1px solid black;
-    margin: auto;
-    margin: 10px;
-    max-width: 250px;
-    border-radius: 5px;
-}
-
-form
-{
+form {
     max-width: 300px;
     margin: auto;
     margin-top: 10px;
@@ -117,42 +82,62 @@ form
     border-radius: 5px;
 }
 
-fieldset
-{
+fieldset {
     display: grid;
     padding-left: 10px;
     grid-template-columns: 40px 40px;
 }
 
-
-#ablak span
-{
+#ablak span {
     float: right;
     background-color: gray;
     color: red;
     padding: 5px;
 }
 
-legend
-{
+legend {
     margin-left: 5px;
 }
 
-footer
-{
+footer {
     text-align: center;
 }
-.megjelen{
+
+/* galéria*/
+.kepek_rendezese {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    width: 80%;
+    margin: auto;
+    position: relative;
+}
+.kis_kepek > img {
+    height: 200px;
+    overflow: hidden;
+}
+.kis_kepek img {
+    border: 1px solid black;
+    margin: auto;
+    width: 100%;
+    /* margin: 10px; */
+    /*   max-width: 250px; */
+    border-radius: 5px;
+}
+
+.megjelen {
     display: none;
     position: absolute;
-    top: 50%; 
-    left: 10%;
-    right: 10%;
+    top: 300px;
+    left: 0px;
     width: 100%;
 }
-.megjelen img{
-    width: 100%;
-}
-.kis_kepek:hover .megjelen{
+
+.kis_kepek:hover .megjelen {
     display: block;
+}
+
+.bezar {
+    display: block;
+    cursor: grab;
 }
